<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button3"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button2"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button4"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toRightOf="@+id/button5"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button6"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button4"
        android:layout_toLeftOf="@+id/button3"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button5"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button7"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignTop="@+id/button7"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button8"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignTop="@+id/button8"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button9"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button10"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="104dp"
        android:layout_marginLeft="36dp"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button1"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignLeft="@+id/button2"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button14"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button11"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignLeft="@+id/button12"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button12"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignTop="@+id/button3"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button13"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button14"
        android:layout_below="@+id/button3"
        android:layout_toRightOf="@+id/button2"
        android:minHeight="64dip"
        android:onClick="onClick"
        android:text="@string/button15"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="Calculator"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignRight="@+id/button12"
        android:layout_marginBottom="21dp"
        android:background="@color/black"
        android:gravity="right"
        android:maxLines="1"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="40sp" />

</RelativeLayout>
